--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
+  <head>
+    <title>
+      intro to html
+    </title>
+   </head>
+
+  
   <body>
     Hello there, awesome person
   </body>
