--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   
     <ol>
     www.gov.in
-    <li>
-      www.nature.pictures.com
+    <li>my favourite site is <a
+        href="https://nature pictures. com">nature pictures</a>!</li>
+      <ol>my favourite site is<a
+         href="https://gov.in">gov</a>!</ol>
+      <ul>my favourite site is <a
+         href="https://flowers.com">flowers</a!</ul>
       </li>
     </ol>
   </ul>
