--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     <title>
       intro to html
     </title>
+   
+ 
+    <link rel="stylesheet"
+      href="styles.css">
    </head>
+ 
   <h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
 <ul>
