--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>
       intro to html
     </title>
+    <link rel="stylesheet"
+     href="styles. css">
    </head>
   <h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
