--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>
       intro to html
-    </title>
+    </title><title>I am a title!</title>
+        <link rel="stylesheet" href="style.css"
     <link rel="stylesheet"
     href="styles. css">
    </head>
