--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>
       intro to html
     </title><title>I am a title!</title>
+    <link rel="stylesheet" href="style.css">.
         <link rel="stylesheet" href="style.css"
     <link rel="stylesheet"
     href="styles. css">
